Use enum for PulsarListener subscriptionType